# SOP_Clipper2

./: CMakeLists.txt  README.md  SOP_clipper.cpp  SOP_clipper.h  hdk_helper.h
